[Patchset 1] perfetto-ui: Show time offset within the trace
Shows the time offset from the start of the trace
on the left of the time axis.

Change-Id: I2e2ba724ac3a8434b6c27bea28e6716c12a8ca7f

--- a/ui/src/assets/common.scss
+++ b/ui/src/assets/common.scss
@@ -357,6 +357,16 @@ canvas.main-canvas {
 
 .time-axis-panel {
   height: 12px;
+  overflow: visible;
+  .time-offset {
+    height: 20px;
+    font-family: 'Google Sans';
+    font-size: 12px;
+    color: #999;
+    width: var(--track-shell-width);
+    text-align: right;
+    padding-right: 5px;
+  }
 }
 
 .slice-details-panel {
